Bug #18591 Repeated "show" and "all status" calls to ndb_mgm causes mgmd to crash
Submitted: 29 Mar 2006 0:54 Modified: 17 May 2006 15:25
Reporter: Jonathan Miller
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:4.1 ? -> OS:Linux (Linux 32 Bit OS)
Assigned to: Tomas Ulin Target Version:

[29 Mar 2006 0:54] Jonathan Miller
Description:
The following script caused the issue:

i=0
while [ $i -le 1 ]
do
   /home/ndbdev/jmiller/builds/bin/ndb_show_tables -c ndb07:14000
   /home/ndbdev/jmiller/builds/bin/ndb_mgm  ndb07:14000 -e "show"
   /home/ndbdev/jmiller/builds/bin/ndb_mgm  ndb07:14000 -e "all status"
   sleep 30
done

#0  0x0064d402 in __kernel_vsyscall ()
(gdb) bt
#0  0x0064d402 in __kernel_vsyscall ()
#1  0x008b3118 in raise () from /lib/libc.so.6
#2  0x008b4888 in abort () from /lib/libc.so.6
#3  0x00f9b6b5 in Vector<unsigned int>::operator[] ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#4  0x00f58591 in TransporterFacade::ThreadData::open ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#5  0x00f5864c in TransporterFacade::open ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#6  0x00fa7c42 in SignalSender::SignalSender ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#7  0x080635eb in MgmtSrvr::alloc_node_id_req ()
#8  0x080661c8 in MgmtSrvr::alloc_node_id ()
#9  0x0806ef1e in MgmApiSession::get_nodeid ()
#10 0x08070435 in Parser<MgmApiSession>::run ()
#11 0x0806f6a9 in MgmApiSession::runSession ()
#12 0x00fda5de in sessionThread_C ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#13 0x00fd0f90 in ndb_thread_wrapper ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#14 0x009fdb80 in start_thread () from /lib/libpthread.so.0
#15 0x009559ce in clone () from /lib/libc.so.6

How to repeat:
See Above
[29 Mar 2006 14:40] Jonathan Miller
I am thinking this is a different crash, but will add here currently:

#0  0x00f8e402 in __kernel_vsyscall ()
#1  0x008b3118 in raise () from /lib/libc.so.6
#2  0x008b4888 in abort () from /lib/libc.so.6
#3  0x007b76b5 in Vector<unsigned int>::operator[] ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#4  0x00774591 in TransporterFacade::ThreadData::open ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#5  0x0077464c in TransporterFacade::open ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#6  0x007c3c42 in SignalSender::SignalSender ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#7  0x08061965 in MgmtSrvr::sendVersionReq ()
#8  0x080631a1 in MgmtSrvr::versionNode ()
#9  0x080633c6 in MgmtSrvr::status ()
#10 0x0806c308 in printNodeStatus ()
#11 0x0806c573 in MgmApiSession::getStatus ()
#12 0x08070435 in Parser<MgmApiSession>::run ()
#13 0x0806f6a9 in MgmApiSession::runSession ()
#14 0x007f65de in sessionThread_C ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#15 0x007ecf90 in ndb_thread_wrapper ()
   from /home/ndbdev/jmiller/builds/lib/mysql/libndbclient.so.0
#16 0x009fdb80 in start_thread () from /lib/libpthread.so.0
#17 0x009559ce in clone () from /lib/libc.so.6
[17 May 2006 8:46] Tomas Ulin
not able to reproduduce

but a patch that fixes the likely cause of this has been pushed to 5.0.22 and 5.1.10
[17 May 2006 9:39] Tomas Ulin
pushed to 4.1.20 (before in 5.0.22, 5.1.11)
[17 May 2006 15:25] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 4.1.20/5.0.22/5.1.10 changelogs. Closed.