Bug #18591 Repeated "show" and "all status" calls to ndb_mgm causes mgmd to crash - not having lock can cause "block number list" to become corrupt => crash - also may result in 2 threads receiving same block no => possble cause of Bug #13987 Cluster: Loss of data nodes can cause high CPU usage from ndb_mgmd

ndb/src/mgmsrv/MgmtSrvr.cpp:
  ndb: added missing lock of mutex